# プロジェクト名
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(unstring)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
# ライブラリ
ADD_LIBRARY(unstring SHARED unstring.c)
INSTALL(TARGETS unstring LIBRARY DESTINATION lib)
install(FILES unstring.h DESTINATION include)
