CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O3")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

# プロジェクト名
PROJECT(unstring C)
SET(serial "1.0.2")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
# ライブラリ
ADD_LIBRARY(unstring SHARED unstring.c)
SET_TARGET_PROPERTIES(unstring PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS unstring LIBRARY DESTINATION lib)
INSTALL(FILES unstring.h DESTINATION include)

ADD_EXECUTABLE(test_unstring unstring_test.c unstring.c)

